# isaac-auto-scene

./: .gitignore  CLAUDE.md  LICENSE  README.md  ScreenCamera_2026-05-25-14-58-16.json  conftest.py  pixi.toml  pyproject.toml
.agent-state/: current-session
.github/workflows/: ci.yml
assets/: home_offset.json
assets/poses/: so101_safe_5pose.yaml  so101_smoke_3pose.yaml  so101_smoke_5pose.yaml
docs/: troubleshooting.md  usage.md
scripts/: install_isaac.sh  render_isaac_scene.py
src/isaac_auto_scene/: bundle_register.py  cad.py  calibrate.py  capture.py  capture_multi.py  cli.py  learned_register.py  lerobot_arm.py  manual_align.py  poses.py  realsense_source.py  register.py  ros2_bridge.py  scene_gen.py  segment.py  task_gen.py
src/isaac_auto_scene/utils/: __init__.py  intrinsics.py  mocks.py  transforms.py
tests/: test_bootstrap.py  test_bundle_register.py  test_cad.py  test_calib_auto_seed.py  test_calibrate.py  test_capture.py  test_capture_multi.py  test_cli.py  test_cli_multi.py  test_home_offset.py  test_learned_register.py  test_lerobot_arm.py  test_manual_align.py  test_poses.py  test_register.py  test_register_gate_override.py  test_register_multi.py  test_render_isaac.py  test_ros2_bridge.py  test_scene_gen.py  test_segment.py  test_smoke_e2e.py  test_task_gen.py  test_transforms.py
tests/fixtures/: __init__.py  minimal_urdf.py  synthetic_pcd.py
