[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isaac-auto-scene"
version = "0.1.0"
description = "Capture a D435 RGB-D frame, segment + register the SO-101 arm point cloud via FPFH+FGR→GICP, and emit an Isaac Sim USD scene mirroring the real setup."
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Koen van Gorkom", email = "gorkom.projects@gmail.com" }]
keywords = [
    "isaac-sim",
    "robotics",
    "point-cloud",
    "registration",
    "realsense",
    "so-101",
    "open3d",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/kvgork/isaac-auto-scene"
Repository = "https://github.com/kvgork/isaac-auto-scene"
Issues = "https://github.com/kvgork/isaac-auto-scene/issues"

[project.scripts]
isaac-auto-scene = "isaac_auto_scene.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/isaac_auto_scene"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
    "hardware: requires hardware (skipped unless --run-hardware)",
]
